dashboard-profiles-frontend-finished

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,11 @@ body {
 .primary-btn {
   @apply bg-[var(--accent)] text-white py-[13px] px-[54px] rounded-[24px] shadow-lg;
 }
+
+.sidebar-item-container {
+  @apply rounded-4xl pl-[48px] py-[8px]  w-full flex items-center cursor-pointer mb-[8px];
+}
+
+.active {
+  @apply bg-[var(--accent)] text-white shadow-lg;
+}
